--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,61 @@
 @tailwind utilities;
 
 .bounce-animation {
-	animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
 }
 @keyframes bounce {
-	0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
-	40% {transform: translateY(-1.5rem);}
-	60% {transform: translateY(-.75rem);}
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-1.5rem);
+  }
+  60% {
+    transform: translateY(-0.75rem);
+  }
 }
 
 .fadeout-animation {
-	transition: all 0.5s ease-in-out 0s;
-	opacity: 0;
+  transition: all 0.5s ease-in-out 0s;
+  opacity: 0;
 }
 
 @keyframes fadeout {
-	from { opacity: 1; }
-	to { opacity: 0; }
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
 
-
 .fadein-animation {
-	transition: all 0.5s ease-in-out 0s;
-	opacity: 1;
+  transition: all 0.5s ease-in-out 0s;
+  opacity: 1;
 }
 
 @keyframes fadein {
-	from { opacity: 0; }
-	to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.waves-bg,
+html.light .waves-bg {
+  background-image: url("/waves-02.svg");
+}
+
+html.dark .waves-bg {
+  background-image: url("/waves-02_dark.svg");
+}
+
+html.dark {
+  background-color: #000;
 }
